Event images part gapping fixed

--- a/static/index/contact/scss/bootstrap/_card.scss
+++ b/static/index/contact/scss/bootstrap/_card.scss
@@ -12,6 +12,7 @@
   background-clip: border-box;
   border: $card-border-width solid $card-border-color;
   @include border-radius($card-border-radius);
+  margin-bottom: 20px;
 
   > hr {
     margin-right: 0;
